tests/NormalTests/paczka1/small_fuzzy/62236228.err
Error in line 5: NMwEQkge8F S649 71,2
Error in line 11: NMwEQkge8F A770 25,9
Error in line 9: z5mkFxcaxX1 A770 11,3
